# Refilled-Decisions

./: README.md  main.py  pyproject.toml  test.py
Calculation/: __init__.py  answer.py  calculation.py  equation.py  interval.py  iteration.py
